<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    android:orientation="vertical"
    tools:context="com.gamma.labo7.MainActivity">

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_registrar"
        android:layout_margin="4dp"/>

    <Button
        android:id="@+id/btn_modificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_modificar"
        android:layout_margin="4dp"/>

    <Button
        android:id="@+id/btn_consultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_consultar"
        android:layout_margin="4dp"/>

</LinearLayout>
